XWIKI-22702: Provide parentType information in EntityReference
  * Provide EntityReference#getParentType
  * Use it in AbstractReferenceEntityReferenceResolver
  * Provide a new test